# oauthrs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  add_details.txt  oauth-rs.service
migrations/: 0001_create_users.sql  0002_google_oauth.sql  0003_soft_delete_and_audit.sql
src/: main.rs
src/core/: extractors.rs  middleware.rs  mod.rs  server.rs  state.rs
src/core/routers/: auth.rs  google.rs  home.rs  invite.rs  login.rs  logout.rs  mod.rs  signup.rs
src/core/routers/oauth/: authorize.rs  mod.rs  revoke.rs  token.rs
src/core/templates/: errors.tpl  index.tpl  login.tpl  signup.tpl
src/libs/: config.rs  db.rs  jwt.rs  mod.rs  models.rs  password.rs  session.rs  templates.rs
