[package]
name    = "OauthRS"
version = "0.1.0"
authors = ["Cornea Valentin <valicornea84@gmail.com>"]
edition = "2021"

[[bin]]
name = "oauth-rs"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
sqlx    = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
chrono  = { version = "0.4", features = ["serde"] }
redis = { version = "0.27", features = ["tokio-comp"] }
jsonwebtoken = "9"
argon2 = "0.5"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest            = { version = "0.12", features = ["json"] }
rand               = "0.8"
urlencoding        = "2"
